--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -44,6 +44,10 @@
 
         p {
             font-size: 1em;
+
+            @media screen and (max-width: 425px) {
+                font-size: .875em;
+            }
         }
     }
 
