--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -200,9 +200,9 @@
             }
 
             &::marker {
+                color: transparent;
+                font-size: 0px;
                 display: none;
-                color: hsla(0, 0%, 0%, 0);
-                font-size: 0em;
             }
 
             > span {
