--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
@@ -1,5 +1,4 @@
-﻿@charset "UTF-8";
-.dotvvm-contrib-cookie-bar {
+﻿.dotvvm-contrib-cookie-bar {
   --cookie-display: none;
   --color-background: white;
   --color-primary: #2a2b2c;
@@ -120,55 +119,30 @@
     max-height: 40vh;
     overflow: auto; }
   .dotvvm-contrib-cookie-bar__details {
-    --details-character: '+';
     border-bottom: var(--border-width) solid var(--color-border); }
-    .dotvvm-contrib-cookie-bar__details[open] {
-      --details-character: '–⁠'; }
     .dotvvm-contrib-cookie-bar__details:last-child {
       border-bottom-width: 0; }
     .dotvvm-contrib-cookie-bar__details > summary {
       background-color: var(--color-background);
       position: relative;
-      display: block;
-      padding: .5em 1em;
-      list-style: none;
+      padding: .9em 1em;
       height: 3em;
       overflow: hidden;
       cursor: pointer;
-      gap: 1em;
       transition: background-color var(--transition-time) ease-in-out; }
       @media only screen and (max-width: 768px) {
         .dotvvm-contrib-cookie-bar__details > summary {
-          height: 2.5em; } }
-      @media only screen and (max-width: 425px) {
-        .dotvvm-contrib-cookie-bar__details > summary {
-          padding: .5em; } }
-      @media only screen and (max-width: 320px) {
-        .dotvvm-contrib-cookie-bar__details > summary {
-          padding: .5em; } }
+          padding: .5em;
+          height: 2.2em; } }
       .dotvvm-contrib-cookie-bar__details > summary:hover {
         --color-background: var(--color-hover); }
-      .dotvvm-contrib-cookie-bar__details > summary::marker {
-        color: transparent;
-        font-size: 0px;
-        display: none; }
-      .dotvvm-contrib-cookie-bar__details > summary > span {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: inherit;
-        left: 1em;
-        z-index: 10; }
-        @media only screen and (max-width: 320px) {
-          .dotvvm-contrib-cookie-bar__details > summary > span {
-            left: .5em; } }
       .dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
         position: absolute;
         top: 50%;
         right: 1em;
         transform: translateY(-50%);
         z-index: 10; }
-        @media only screen and (max-width: 320px) {
+        @media only screen and (max-width: 768px) {
           .dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
             right: .5em; } }
       .dotvvm-contrib-cookie-bar__details > summary > small {
@@ -179,23 +153,19 @@
           .dotvvm-contrib-cookie-bar__details > summary > small {
             font-size: .7em; } }
   .dotvvm-contrib-cookie-bar__rule {
-    display: inline-flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: flex-start;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 2.5em;
+    z-index: 10;
     font-size: 0.875em;
     font-weight: 600;
-    gap: .8em; }
-    @media only screen and (max-width: 320px) {
+    gap: .8em;
+    white-space: nowrap; }
+    @media only screen and (max-width: 768px) {
       .dotvvm-contrib-cookie-bar__rule {
+        left: 2em;
         font-size: .7em; } }
-    .dotvvm-contrib-cookie-bar__rule:before {
-      content: var(--details-character);
-      font-size: 2em;
-      color: var(--color-success);
-      line-height: 1.5; }
-    .dotvvm-contrib-cookie-bar__rule > span {
-      white-space: nowrap; }
   .dotvvm-contrib-cookie-bar__desc {
     display: block;
     font-size: small; }
