--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -160,12 +160,7 @@
     }
 
     &__details {
-        --details-character: '+';
         @include border('bottom');
-
-        &[open] {
-            --details-character: '–⁠';
-        }
 
         &:last-child {
             border-bottom-width: 0;
@@ -174,48 +169,19 @@
         > summary {
             background-color: var(--color-background);
             position: relative;
-            display: block;
-            padding: .5em 1em;
-            list-style: none;
+            padding: .9em 1em;
             height: 3em;
             overflow: hidden;
             cursor: pointer;
-            gap: 1em;
             transition: background-color var(--transition-time) ease-in-out;
 
             @include res-max-tablet {
-                height: 2.5em;
-            }
-
-            @include res-max-mobile {
                 padding: .5em;
-            }
-
-            @include res-max-mobile-small {
-                padding: .5em;
+                height: 2.2em;
             }
 
             &:hover {
                 --color-background: var(--color-hover)
-            }
-
-            &::marker {
-                color: transparent;
-                font-size: 0px;
-                display: none;
-            }
-
-            > span {
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-                background-color: inherit;
-                left: 1em;
-                z-index: 10;
-
-                @include res-max-mobile-small {
-                    left: .5em;
-                }
             }
 
             > .toggle-button, > small {
@@ -225,7 +191,7 @@
                 transform: translateY(-50%);
                 z-index: 10;
 
-                @include res-max-mobile-small {
+                @include res-max-tablet {
                     right: .5em;
                 }
             }
@@ -243,27 +209,19 @@
     }
 
     &__rule {
-        display: inline-flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        justify-content: flex-start;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 2.5em;
+        z-index: 10;
         font-size: 0.875em;
         font-weight: 600;
         gap: .8em;
+        white-space: nowrap;
 
-        @include res-max-mobile-small {
+        @include res-max-tablet {
+            left: 2em;
             font-size: .7em;
-        }
-
-        &:before {
-            content: var(--details-character);
-            font-size: 2em;
-            color: var(--color-success);
-            line-height: 1.5;
-        }
-
-        > span {
-            white-space: nowrap;
         }
     }
 
