Add button for allowing only necessary cookies to pop up bar

--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -290,6 +290,12 @@
             align-items: center;
             justify-content: flex-end;
             gap: 1em;
+
+            > a {
+                text-decoration: underline;
+                color: var(--color-text--light);
+                font-size: .8em;
+            }
         }
     }
     //ToggleButton
