--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
@@ -280,6 +280,11 @@
   justify-content: flex-end;
   gap: 1em;
 }
+.dotvvm-contrib-cookie-bar__pop-up > div > a {
+  text-decoration: underline;
+  color: var(--color-text--light);
+  font-size: 0.8em;
+}
 .dotvvm-contrib-cookie-bar .toggle-button {
   --circle-size: calc(100% - 4px);
   --cicle-trans-x: 2px;
