--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
@@ -1,322 +1,260 @@
 ﻿.dotvvm-contrib-cookie-bar {
   --cookie-display: none;
-  --color-background: hsl(0, 0%, 100%);
-  --color-primary: hsl(210, 2%, 17%);
-  --color-text: hsl(90, 2%, 17%);
-  --color-text--light: hsl(0, 0%, 44%);
-  --color-border: hsl(0, 0%, 73%);
-  --color-hover: hsl(0, 0%, 92%);
-  --color-overlay: hsla(0, 0%, 0%, .6);
-  --color-success: hsl(79, 100%, 37%);
-  --color-box-shadow: hsla(0, 0%, 0%, .3);
+  --color-background: white;
+  --color-primary: #2a2b2c;
+  --color-text: #2b2c2a;
+  --color-text--light: #707070;
+  --color-border: #bababa;
+  --color-hover: #ebebeb;
+  --color-overlay: rgba(0, 0, 0, 0.6);
+  --color-success: #81bd00;
+  --color-box-shadow: rgba(0, 0, 0, 0.3);
   --border-width: 1px;
   --dialog_box-shadow: 0 0 6px 0 var(--color-box-shadow);
   --dialog_border-radius: .3em;
   --link_text-decoration: none;
   --transition-time: .25s;
   font-size: 16px;
-  color: var(--color-text);
-}
-.dotvvm-contrib-cookie-bar__overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--color-overlay);
-  z-index: 9999;
-}
-.dotvvm-contrib-cookie-bar__overlay * {
-  box-sizing: border-box;
-}
-.dotvvm-contrib-cookie-bar__dialog {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  width: calc(100% - 2em);
-  max-width: 40em;
-  max-height: 90vh;
-  background: var(--color-background);
-  border-radius: var(--dialog_border-radius);
-  color: var(--color-text);
-  overflow: hidden;
-}
-.dotvvm-contrib-cookie-bar__dialog p {
-  font-size: 1em;
-}
-@media only screen and (max-width: 425px) {
-  .dotvvm-contrib-cookie-bar__dialog p {
-    font-size: 0.875em;
-  }
-}
-.dotvvm-contrib-cookie-bar__content {
-  border-top: var(--border-width) solid var(--color-border);
-  padding-top: 1.5em;
-}
-@media only screen and (max-width: 425px) {
+  color: var(--color-text); }
+  .dotvvm-contrib-cookie-bar__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--color-overlay);
+    z-index: 9999; }
+    .dotvvm-contrib-cookie-bar__overlay * {
+      box-sizing: border-box; }
+  .dotvvm-contrib-cookie-bar__dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    width: calc(100% - 2em);
+    max-width: 40em;
+    max-height: 90vh;
+    background: var(--color-background);
+    border-radius: var(--dialog_border-radius);
+    color: var(--color-text);
+    overflow: hidden; }
+    .dotvvm-contrib-cookie-bar__dialog p {
+      font-size: 1em; }
+      @media only screen and (max-width: 425px) {
+        .dotvvm-contrib-cookie-bar__dialog p {
+          font-size: .875em; } }
   .dotvvm-contrib-cookie-bar__content {
-    padding-top: 0.75em;
-  }
-}
-.dotvvm-contrib-cookie-bar__title {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 1.5em;
-}
-@media only screen and (max-width: 425px) {
+    border-top: var(--border-width) solid var(--color-border);
+    padding-top: 1.5em; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__content {
+        padding-top: .75em; } }
   .dotvvm-contrib-cookie-bar__title {
-    margin-bottom: 0.75em;
-  }
-}
-.dotvvm-contrib-cookie-bar__title > h4 {
-  font-size: medium;
-  margin: 0;
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__title > h4 {
-    font-size: 0.8em;
-  }
-}
-.dotvvm-contrib-cookie-bar__title > a {
-  font-size: small;
-  font-weight: 400;
-  color: var(--color-grey);
-  text-decoration: var(--link_text-decoration);
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.dotvvm-contrib-cookie-bar__title > a:hover {
-  --link_text-decoration: underline;
-}
-.dotvvm-contrib-cookie-bar__body {
-  padding: 0 2em;
-}
-@media only screen and (max-width: 425px) {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1.5em; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__title {
+        margin-bottom: .75em; } }
+    .dotvvm-contrib-cookie-bar__title > h4 {
+      font-size: medium;
+      margin: 0; }
+      @media only screen and (max-width: 320px) {
+        .dotvvm-contrib-cookie-bar__title > h4 {
+          font-size: .8em; } }
+    .dotvvm-contrib-cookie-bar__title > a {
+      font-size: small;
+      font-weight: 400;
+      color: var(--color-grey);
+      text-decoration: var(--link_text-decoration);
+      text-transform: uppercase;
+      cursor: pointer; }
+      .dotvvm-contrib-cookie-bar__title > a:hover {
+        --link_text-decoration: underline; }
   .dotvvm-contrib-cookie-bar__body {
-    padding: 0 1em;
-  }
-}
-.dotvvm-contrib-cookie-bar__header {
-  padding: 2em;
-}
-@media only screen and (max-width: 425px) {
+    padding: 0 2em; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__body {
+        padding: 0 1em; } }
   .dotvvm-contrib-cookie-bar__header {
-    padding: 1em;
-  }
-}
-.dotvvm-contrib-cookie-bar__header > h3 {
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__header > h3 {
-    margin-bottom: 0.5em;
-    font-size: 1em;
-  }
-}
-.dotvvm-contrib-cookie-bar__header > p {
-  margin-bottom: 0;
-}
-@media only screen and (max-width: 425px) {
-  .dotvvm-contrib-cookie-bar__header > p {
-    display: -webkit-box;
-    width: 100%;
-    overflow: hidden;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-  }
-}
-.dotvvm-contrib-cookie-bar__footer {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.5em 2em;
-  gap: 0.1em;
-}
-@media only screen and (max-width: 425px) {
+    padding: 2em; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__header {
+        padding: 1em; } }
+    .dotvvm-contrib-cookie-bar__header > h3 {
+      margin-top: 0;
+      margin-bottom: 1em; }
+      @media only screen and (max-width: 320px) {
+        .dotvvm-contrib-cookie-bar__header > h3 {
+          margin-bottom: .5em;
+          font-size: 1em; } }
+    .dotvvm-contrib-cookie-bar__header > p {
+      margin-bottom: 0; }
+      @media only screen and (max-width: 425px) {
+        .dotvvm-contrib-cookie-bar__header > p {
+          display: -webkit-box;
+          width: 100%;
+          overflow: hidden;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 3; } }
   .dotvvm-contrib-cookie-bar__footer {
-    padding: 0.75em 1em;
-  }
-}
-.dotvvm-contrib-cookie-bar__footer > a {
-  text-decoration: underline;
-  color: var(--color-text--light);
-  font-size: 0.8em;
-}
-.dotvvm-contrib-cookie-bar__options {
-  border: var(--border-width) solid var(--color-border);
-  border-radius: var(--dialog_border-radius);
-  max-height: 40vh;
-  overflow: auto;
-}
-.dotvvm-contrib-cookie-bar__details {
-  border-bottom: var(--border-width) solid var(--color-border);
-}
-.dotvvm-contrib-cookie-bar__details:last-child {
-  border-bottom-width: 0;
-}
-.dotvvm-contrib-cookie-bar__details > summary {
-  background-color: var(--color-background);
-  position: relative;
-  padding: 0.9em 1em;
-  height: 3em;
-  overflow: hidden;
-  cursor: pointer;
-  transition: background-color var(--transition-time) ease-in-out;
-}
-@media only screen and (max-width: 768px) {
-  .dotvvm-contrib-cookie-bar__details > summary {
-    padding: 0.5em;
-    height: 2.2em;
-  }
-}
-.dotvvm-contrib-cookie-bar__details > summary:hover {
-  --color-background: var(--color-hover) ;
-}
-.dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
-  position: absolute;
-  top: 50%;
-  right: 1em;
-  transform: translateY(-50%);
-  z-index: 10;
-}
-@media only screen and (max-width: 768px) {
-  .dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
-    right: 0.5em;
-  }
-}
-.dotvvm-contrib-cookie-bar__details > summary > small {
-  font-size: small;
-  font-weight: 400;
-  color: var(--color-text--light);
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__details > summary > small {
-    font-size: 0.7em;
-  }
-}
-.dotvvm-contrib-cookie-bar__rule {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 2.5em;
-  z-index: 10;
-  font-size: 0.875em;
-  font-weight: 600;
-  gap: 0.8em;
-  white-space: nowrap;
-}
-@media only screen and (max-width: 768px) {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5em 2em;
+    gap: .1em; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__footer {
+        padding: .75em 1em; } }
+    .dotvvm-contrib-cookie-bar__footer > a {
+      text-decoration: underline;
+      color: var(--color-text--light);
+      font-size: .8em; }
+  .dotvvm-contrib-cookie-bar__options {
+    border: var(--border-width) solid var(--color-border);
+    border-radius: var(--dialog_border-radius);
+    max-height: 40vh;
+    overflow: auto; }
+  .dotvvm-contrib-cookie-bar__details {
+    border-bottom: var(--border-width) solid var(--color-border); }
+    .dotvvm-contrib-cookie-bar__details:last-child {
+      border-bottom-width: 0; }
+    .dotvvm-contrib-cookie-bar__details > summary {
+      background-color: var(--color-background);
+      position: relative;
+      padding: .9em 1em;
+      height: 3em;
+      overflow: hidden;
+      cursor: pointer;
+      transition: background-color var(--transition-time) ease-in-out; }
+      @media only screen and (max-width: 768px) {
+        .dotvvm-contrib-cookie-bar__details > summary {
+          padding: .5em;
+          height: 2.2em; } }
+      .dotvvm-contrib-cookie-bar__details > summary:hover {
+        --color-background: var(--color-hover); }
+      .dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
+        position: absolute;
+        top: 50%;
+        right: 1em;
+        transform: translateY(-50%);
+        z-index: 10; }
+        @media only screen and (max-width: 768px) {
+          .dotvvm-contrib-cookie-bar__details > summary > .toggle-button, .dotvvm-contrib-cookie-bar__details > summary > small {
+            right: .5em; } }
+      .dotvvm-contrib-cookie-bar__details > summary > small {
+        font-size: small;
+        font-weight: 400;
+        color: var(--color-text--light); }
+        @media only screen and (max-width: 320px) {
+          .dotvvm-contrib-cookie-bar__details > summary > small {
+            font-size: .7em; } }
   .dotvvm-contrib-cookie-bar__rule {
-    left: 2em;
-    font-size: 0.7em;
-  }
-}
-.dotvvm-contrib-cookie-bar__desc {
-  display: block;
-  font-size: small;
-}
-.dotvvm-contrib-cookie-bar__desc > p {
-  padding: 0 1em 1em;
-  font-size: 1em;
-  margin-top: 1em;
-  margin-bottom: 0;
-}
-.dotvvm-contrib-cookie-bar__desc > details {
-  border-top: var(--border-width) solid var(--color-border);
-}
-.dotvvm-contrib-cookie-bar__pop-up {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  display: var(--cookie-display);
-  width: 100%;
-  padding: 1.5em;
-  background: var(--color-background);
-  z-index: 9999;
-  box-shadow: var(--dialog_box-shadow);
-  gap: 1em;
-  box-sizing: border-box;
-}
-@media only screen and (max-width: 425px) {
-  .dotvvm-contrib-cookie-bar__pop-up {
-    padding: 1em;
-  }
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__pop-up {
-    gap: 0.5em;
-  }
-}
-.dotvvm-contrib-cookie-bar__pop-up--open {
-  --cookie-display: grid;
-}
-.dotvvm-contrib-cookie-bar__pop-up > h3 {
-  margin: 0;
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__pop-up > h3 {
-    font-size: 1em;
-  }
-}
-.dotvvm-contrib-cookie-bar__pop-up > p {
-  margin: 0;
-  font-size: 1em;
-}
-@media only screen and (max-width: 320px) {
-  .dotvvm-contrib-cookie-bar__pop-up > p {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 2.5em;
+    z-index: 10;
     font-size: 0.875em;
-  }
-}
-.dotvvm-contrib-cookie-bar__pop-up > div {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1em;
-}
-.dotvvm-contrib-cookie-bar__pop-up > div > a {
-  text-decoration: underline;
-  color: var(--color-text--light);
-  font-size: 0.8em;
-}
-.dotvvm-contrib-cookie-bar .toggle-button {
-  --circle-size: calc(100% - 4px);
-  --cicle-trans-x: 2px;
-  --toggle-bg: var(--color-text--light);
-  --color-background: hsl(0, 0%, 100%);
-  position: relative;
-  width: 40px;
-  min-width: 40px;
-  height: 24px;
-  background-color: var(--toggle-bg);
-  border-radius: 12px;
-  transition: background-color var(--transition-time) ease-in-out;
-  cursor: pointer;
-}
-.dotvvm-contrib-cookie-bar .toggle-button--on {
-  --cicle-trans-x: calc(100% - 2px);
-  --toggle-bg: var(--color-success);
-}
-.dotvvm-contrib-cookie-bar .toggle-button > input {
-  opacity: 0;
-}
-.dotvvm-contrib-cookie-bar .toggle-button:after {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  display: block;
-  content: "";
-  height: var(--circle-size);
-  aspect-ratio: 1/1;
-  background-color: var(--color-background);
-  border-radius: 50%;
-  transform: translate(var(--cicle-trans-x), -50%);
-  transition: background-color var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
-  z-index: 999;
-}
+    font-weight: 600;
+    gap: .8em;
+    white-space: nowrap; }
+    @media only screen and (max-width: 768px) {
+      .dotvvm-contrib-cookie-bar__rule {
+        left: 2em;
+        font-size: .7em; } }
+  .dotvvm-contrib-cookie-bar__desc {
+    display: block;
+    font-size: small; }
+    .dotvvm-contrib-cookie-bar__desc > p {
+      padding: 0 1em 1em;
+      font-size: 1em;
+      margin-top: 1em;
+      margin-bottom: 0; }
+    .dotvvm-contrib-cookie-bar__desc > details {
+      border-top: var(--border-width) solid var(--color-border); }
+  .dotvvm-contrib-cookie-bar__pop-up {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: var(--cookie-display);
+    width: 100%;
+    padding: 1.5em;
+    background: var(--color-background);
+    z-index: 9999;
+    box-shadow: var(--dialog_box-shadow);
+    gap: 1em;
+    box-sizing: border-box; }
+    @media only screen and (max-width: 425px) {
+      .dotvvm-contrib-cookie-bar__pop-up {
+        padding: 1em; } }
+    @media only screen and (max-width: 320px) {
+      .dotvvm-contrib-cookie-bar__pop-up {
+        gap: .5em; } }
+    .dotvvm-contrib-cookie-bar__pop-up--open {
+      --cookie-display: grid; }
+    .dotvvm-contrib-cookie-bar__pop-up > h3 {
+      margin: 0; }
+      @media only screen and (max-width: 320px) {
+        .dotvvm-contrib-cookie-bar__pop-up > h3 {
+          font-size: 1em; } }
+    .dotvvm-contrib-cookie-bar__pop-up > p {
+      margin: 0;
+      font-size: 1em; }
+      @media only screen and (max-width: 320px) {
+        .dotvvm-contrib-cookie-bar__pop-up > p {
+          font-size: .875em; } }
+  .dotvvm-contrib-cookie-bar__buttons {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    gap: 1em;
+    justify-content: space-between; }
+    .dotvvm-contrib-cookie-bar__buttons .button {
+      white-space: nowrap; }
+    .dotvvm-contrib-cookie-bar__buttons > a {
+      text-decoration: underline;
+      white-space: nowrap;
+      color: var(--color-text--light);
+      font-size: .8em; }
+    .dotvvm-contrib-cookie-bar__buttons > div {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 1em; }
+  .dotvvm-contrib-cookie-bar .toggle-button {
+    --circle-size: calc(100% - 4px);
+    --cicle-trans-x: 2px;
+    --toggle-bg: var(--color-text--light);
+    --color-background: white;
+    position: relative;
+    width: 40px;
+    min-width: 40px;
+    height: 24px;
+    background-color: var(--toggle-bg);
+    border-radius: 12px;
+    transition: background-color var(--transition-time) ease-in-out;
+    cursor: pointer; }
+    .dotvvm-contrib-cookie-bar .toggle-button--on {
+      --cicle-trans-x: calc(100% - 2px);
+      --toggle-bg: var(--color-success); }
+    .dotvvm-contrib-cookie-bar .toggle-button > input {
+      opacity: 0; }
+    .dotvvm-contrib-cookie-bar .toggle-button:after {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      content: '';
+      height: var(--circle-size);
+      aspect-ratio: 1 / 1;
+      background-color: var(--color-background);
+      border-radius: 50%;
+      transform: translate(var(--cicle-trans-x), -50%);
+      transition: background-color var(--transition-time) ease-in-out, transform var(--transition-time) ease-in-out;
+      z-index: 999; }
